--- a/src/i18n/locales/en/admin.json
+++ b/src/i18n/locales/en/admin.json
@@ -77,7 +77,9 @@
     "completedAt": "Completed At",
     "template": "Template",
     "reservationProgress": "Reservation Task Progress",
-    "edit": "Edit"
+    "edit": "Edit",
+    "notes": "Notes",
+    "notesPlaceholder": "Enter notes about this task..."
   },
   "anniversary": {
     "birthday": "Birthday",
