Refine auth copy and memo components

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -48,5 +48,8 @@
       "tooShort": "Password must be at least 6 characters",
       "required": "Please fill in all fields"
     }
+  },
+  "common": {
+    "cancel": "Cancel"
   }
 }
