--- a/src/i18n/locales/ja/auth.json
+++ b/src/i18n/locales/ja/auth.json
@@ -48,5 +48,8 @@
       "tooShort": "パスワードは6文字以上で入力してください",
       "required": "すべての項目を入力してください"
     }
+  },
+  "common": {
+    "cancel": "キャンセル"
   }
 }
