Update admin settings, staff monitor, and translations

--- a/src/i18n/locales/en/admin.json
+++ b/src/i18n/locales/en/admin.json
@@ -108,7 +108,7 @@
   },
   "staffManagement": {
     "title": "Staff Management",
-    "description": "Manage staff availability and task assignments",
+    "description": "Manage and edit staff information",
     "staffList": "Staff List",
     "staffMonitor": "Staff Monitor",
     "onDuty": "On Duty",
@@ -116,7 +116,7 @@
     "offDuty": "Off Duty",
     "shiftStart": "Shift Start",
     "shiftEnd": "Shift End",
-    "onDutyStaff": "On Duty Staff",
+    "onDutyStaff": "On Duty",
     "activeTasks": "Active Tasks",
     "inProgressTasks": "In Progress Tasks",
     "unassignedTasks": "Unassigned Tasks",
@@ -147,7 +147,33 @@
     "items": "",
     "incomplete": "Incomplete",
     "allRoles": "All",
-    "selectStaffToView": "Select staff to view details"
+    "selectStaffToView": "Select staff to view details",
+    "totalStaff": "Total Staff",
+    "fullTimeStaff": "Full-time",
+    "partTimeStaff": "Part-time",
+    "searchPlaceholder": "Search by name or ID...",
+    "noStaffFound": "No staff found",
+    "editStaff": "Edit Staff Information",
+    "basicInfo": "Basic Information",
+    "name": "Name",
+    "nameKana": "Name (Kana)",
+    "role": "Role",
+    "employmentType": "Employment Type",
+    "hireDate": "Hire Date",
+    "assignedArea": "Assigned Area",
+    "shiftInfo": "Shift Information",
+    "shiftTime": "Shift Time",
+    "contactInfo": "Contact Information",
+    "emergencyPhone": "Emergency Phone",
+    "certifications": "Certifications",
+    "languages": "Languages",
+    "notes": "Notes",
+    "notesPlaceholder": "Enter notes...",
+    "staffId": "Staff ID",
+    "years": " years ",
+    "months": " months",
+    "noSkills": "No skills registered",
+    "noCertifications": "No certifications"
   },
   "shuttleManagement": {
     "title": "Shuttle Management",
