--- a/src/i18n/locales/ja/admin.json
+++ b/src/i18n/locales/ja/admin.json
@@ -108,7 +108,7 @@
   },
   "staffManagement": {
     "title": "スタッフ管理",
-    "description": "スタッフの稼働状況とタスク割当を管理します",
+    "description": "スタッフ情報の管理・編集を行います",
     "staffList": "スタッフ一覧",
     "staffMonitor": "スタッフモニター",
     "onDuty": "勤務中",
@@ -116,7 +116,7 @@
     "offDuty": "勤務外",
     "shiftStart": "勤務開始",
     "shiftEnd": "勤務終了",
-    "onDutyStaff": "出勤中スタッフ",
+    "onDutyStaff": "出勤中",
     "activeTasks": "アクティブタスク",
     "inProgressTasks": "作業中タスク",
     "unassignedTasks": "未割当タスク",
@@ -147,7 +147,33 @@
     "items": "件",
     "incomplete": "未完了",
     "allRoles": "すべて",
-    "selectStaffToView": "スタッフを選択して詳細を表示"
+    "selectStaffToView": "スタッフを選択して詳細を表示",
+    "totalStaff": "総スタッフ数",
+    "fullTimeStaff": "正社員",
+    "partTimeStaff": "非正規",
+    "searchPlaceholder": "名前・IDで検索...",
+    "noStaffFound": "該当するスタッフが見つかりません",
+    "editStaff": "スタッフ情報編集",
+    "basicInfo": "基本情報",
+    "name": "氏名",
+    "nameKana": "フリガナ",
+    "role": "役職",
+    "employmentType": "雇用形態",
+    "hireDate": "入社日",
+    "assignedArea": "担当エリア",
+    "shiftInfo": "シフト情報",
+    "shiftTime": "勤務時間",
+    "contactInfo": "連絡先",
+    "emergencyPhone": "緊急連絡先電話番号",
+    "certifications": "保有資格",
+    "languages": "対応言語",
+    "notes": "メモ",
+    "notesPlaceholder": "特記事項などを入力...",
+    "staffId": "スタッフID",
+    "years": "年",
+    "months": "ヶ月",
+    "noSkills": "スキル未登録",
+    "noCertifications": "資格未登録"
   },
   "shuttleManagement": {
     "title": "送迎管理",
