--- a/src/i18n/locales/ja/admin.json
+++ b/src/i18n/locales/ja/admin.json
@@ -9,6 +9,7 @@
     "celebration": "記念日管理",
     "taskHistory": "タスク管理",
     "staffMessages": "スタッフ連絡",
+    "guestMessages": "ゲスト連絡",
     "settings": "設定",
     "toStaff": "スタッフ画面へ",
     "toAdmin": "管理画面へ"
@@ -229,5 +230,9 @@
   "staffMessages": {
     "title": "スタッフ連絡",
     "description": "スタッフからのメッセージ・ヘルプリクエストを確認できます"
+  },
+  "guestMessages": {
+    "title": "ゲスト連絡",
+    "description": "ゲストからのリクエスト・お問い合わせを確認できます"
   }
 }
